--- a/trakberry/templates/barcode_alert.html
+++ b/trakberry/templates/barcode_alert.html
@@ -3,9 +3,9 @@
 {% block content %}
 <body style="background-color:red;">
 
-this is atom text editor
+<!-- this is atom text editor -->
 <br><br><br>
-<font style="font-size: 88px; color:white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkgoldenrod;">DUPLICATE!!!
+<font style="font-size: 88px; color:white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkgoldenrod;">DUPLICATE FOUND!
 </font>
 <br>
 <font style="font-size: 68px; color:white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkgoldenrod;">{{request.session.diff_time}} Seconds Ago
