changes on coop

--- a/trakberry/templates/barcode_alert.html
+++ b/trakberry/templates/barcode_alert.html
@@ -3,7 +3,7 @@
 {% block content %}
 <body style="background-color:red;">
 
-
+<!-- this is atom text editor which rocks -->
 <br><br><br>
 <font style="font-size: 88px; color:white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkgoldenrod;">DUPLICATE FOUND!
 </font>
@@ -29,8 +29,3 @@ Current Time:{{request.session.now_time}}
 </font>
 </body>
 {% endblock %}
-
-
-
-
-
