--- a/trakberry/templates/mgmt_start.html
+++ b/trakberry/templates/mgmt_start.html
@@ -12,7 +12,7 @@
 		&nbsp;&nbsp;&nbsp; <b>Part </b>&nbsp;&nbsp;&nbsp;
 	</div>
 	<div class="body3h">
-		&nbsp;&nbsp;&nbsp; <b>24 Hr Productionn </b>&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;&nbsp; <b>24 Hr Production</b>&nbsp;&nbsp;&nbsp;
 	</div>
 	<div class="body3h">
 		&nbsp;&nbsp;&nbsp;<b>Product Line</b> &nbsp;&nbsp;&nbsp;
