--- a/trakberry/templates/kiosk_scrap.html
+++ b/trakberry/templates/kiosk_scrap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Trash Form</title>
+  <title>Kiosk Scrap Form</title>
 	<!-- ********************************* BootStrap Local*******************************-->
 	<script src="/static/bootstrap/js/1.11.3/jquery.min.js"></script>
 	<script src="/static/bootstrap/js/bootstrap.min.js"></script>
