Put info on form, I couldn't find the default company styling, if you could editpossibly?

--- a/trakberry/templates/kiosk_scrap.html
+++ b/trakberry/templates/kiosk_scrap.html
@@ -20,9 +20,10 @@
 #full-screen-background-image {z-index: -999;min-height: 110%; min-width: 100%;width: 100%;height: 110%;position: fixed;top: 0;  left: 0;}
 	.banner2_bg{position:absolute;background-color: #000000;opacity: 0.8;filter:alpha(opacity=80);width:auto; height:auto;z-index:-440;	border-radius: 25px;;}
     h1{text-align: center; color: rgb(216, 211, 211);}
-    #select-choice{position: relative; font-family: Arial; background-color: bisque;}
-    .same-line{margin: 15px 0 0 0; display: inline-block; float: left;  width: 30%;}
-
+    #dd-menu{position: relative; display: inline-block; font-family: Arial; background-color: bisque;}
+    .same-line{margin: 15px 0 0 0; text-align: center; display: inline-block; float: left;  width: 30%;}
+    .drop-down{position: relative; display: inline-block; font-family: Arial; background-color: rgb(158, 95, 18);}
+    
 	.frame1 {color:black;text-align:center;margin-left: 20%;width:50%}
 	.button3 {
   width: 80%;
