worked on the Includes and cleaning things up

--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -149,7 +149,7 @@
 
 			
             <a class="navbar-brand" href="#" style="position:absolute;left:0px;top:-10px;">
-                <img src="/static/media/JELogo.gif?{{TCUR}}"  style="border-radius: 25px;" height="40" width="150">
+                <img src="/static/media/JElogo.gif?{{TCUR}}"  style="border-radius: 25px;" height="40" width="150">
             </a>
 
         </div>
