Added Master Program that links all programs and utilities to one

--- a/trakberry/templates/kiosk/kiosk_menu.html
+++ b/trakberry/templates/kiosk/kiosk_menu.html
@@ -8,15 +8,15 @@
 	<!-- ***********************************************************************************-->
 {% block grid %}
 	<!-- Include Styling for Buttons and Frames -->
-	<link rel="stylesheet" href="/static/style_1/grid_kiosk_main2.css?{{TCUR}">
-	<link rel="stylesheet" href="/static/style_1/kiosk_main.css?{{TCUR}">
+	<link rel="stylesheet" href="/static/style_1/grid_kiosk_main2.css?{{request.session.TCUR}}">
+	<link rel="stylesheet" href="/static/style_1/kiosk_main.css?{{request.session.TCUR}}">
 {% endblock %}
 </head>
 
 <body>
 <meta name="apple-mobile-web-app-capable" content="yes" />
 
-<img alt="full screen background image" src="/static/media/kiosk.jpeg?{{TCUR}}" id="full-screen-background-image"/>
+<img alt="full screen background image" src="/static/media/kiosk.jpeg?{{request.session.TCUR}}" id="full-screen-background-image"/>
 
 <br><br><br>
 
