--- a/trakberry/templates/maint_mgmt_main.html
+++ b/trakberry/templates/maint_mgmt_main.html
@@ -1,36 +1,8 @@
 <html>
     <head>
         {% block tables2 %}
-   
-        
-<style type="text/css">
-.frame1 {color:black;text-align:center;background:rgb(214, 214, 214);float:left;width:40%}
-.frame2{color:black;text-align:center;background:rgb(253, 186, 186);float:left;width:30%;position:relative;left:5px;}
-.frame3{color:black;text-align:center;background:rgb(42, 165, 83);float:left;width:25%;position:relative;left:10px;}
-.frame4{color:black;text-align:center;background:rgb(165, 116, 42);float:left;width:15%}
-.frame5{color:black;text-align:center;background:rgb(168, 168, 168);float:right;width:40%}
-
-.head1{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);background:rgb(226, 226, 226);width:100%}
-.head2{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);background:rgb(255, 253, 241);width:100%}
-.head3{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);float:left;background:rgb(226, 226, 226);width:80%;height: 30px;}
-.head4{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);float:left;background:rgb(226, 226, 226);width:20%; height: 30px;padding: 7px;}
-.head5{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);float:left;background:rgb(226, 226, 226);width:100%;height: 30px;}
-.body1{color:black;text-align:left;background:rgb(197, 253, 186);border: .4px solid rgb(0, 0, 0);width:100%}
-.body2{color:black;text-align:left;background:rgb(224, 174, 141);border: .4px solid rgb(0, 0, 0);width:100%}
-.body3{color:black;text-align:center;background:rgb(199, 187, 166);float:left;border: .4px solid rgb(0, 0, 0);width:80%}
-.body4{color:black;text-align:center;background:rgb(240, 227, 203);float:left;border: .4px solid rgb(0, 0, 0);width:80%}
-.body3a{color:black;text-align:center;background:rgb(199, 187, 166);float:left;border: .4px solid rgb(0, 0, 0);width:20%}
-.body4a{color:black;text-align:center;background:rgb(240, 227, 203);float:left;border: .4px solid rgb(0, 0, 0);width:20%}
-.body5{color:black;text-align:center;background:rgb(199, 187, 166);float:left;border: .4px solid rgb(0, 0, 0);position:relative;width:100%;}
-.body6{color:black;text-align:center;background:rgb(240, 227, 203);float:left;border: .4px solid rgb(0, 0, 0);position:relative;width:100%;}
-</style>
-
-
         {% endblock %}
-        
-    <style type="text/css">
-        #full-screen-background-image {z-index: -999;min-height: 110%; min-width: 100%;width: 100%;height: 110%;position: fixed;top: ;  left: 0;}
-    </style>
+
       <title>Main APP</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,7 +13,7 @@
 			
 			<link href="/static/bootstrap/css/bootstrap-toggle/bootstrap-toggle.min.css" rel="stylesheet">
 			<script src="/static/bootstrap/css/bootstrap-toggle/bootstrap-toggle.min.js"></script>
-
+			<link rel="stylesheet" href="/static/style_1/maint_mgmt.css?{{request.session.TCUR}}">  <!-- include the proper styling -->
 
       {% block grid %}
       {% endblock %}
@@ -59,7 +31,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#" style="position:absolute;left:0px;top:-10px;">
-                    <img src="/static/media/JELogo.gif?{{TCUR}}"  style="border-radius: 25px;" height="40" width="150">   <!-- This is the top left icon -->
+					<img src="/static/media/JELogo.gif?{{TCUR}}"  style="border-radius: 25px;" height="40" width="150">   <!-- This is the top left icon -->
+					
                 </a>
             </div>
             <div class="collapse navbar-collapse">
