--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -11,49 +11,50 @@
   <form action="" method="post">{% csrf_token %}
     <center>
     <div class="grid-container">
+        
+        
+
         <div class="item1">
-            <input style="background-color: #AAA00A;border-radius: 10px;width:140px;height:60px;font-weight: 700;font-size:23px;align=left;" type="submit" value="Enter">
-        </div>
-        <div class="item2">
-            <button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=left;" type="submit" name="kiosk_assign_button1" value="-1">Reset</button>
-        </div>
-        <div class="item3">
-            <button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=right;" type="submit" name="kiosk_assign_button2" value="-2">Cancel</button>
-        </div>
-        <div class="item4">
-            <font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity ($)</font>
-        <br>
-            <input id = "amount" style="font-size:23px;width:190px;height:60px;" name="clock" type="number" autofocus >
-        </div>
-        <div class="item4">
-            <font color="#000000" size ="6" style="font-weight: 700;font-size:29px;"><u>Machine</u></font>
-        </div>
-        <div class="item5">
-            1.<select id="a-menu" style="font-size:15px;width:124px;height:60px;" list="browsers" name="job1" >	
+            <select id="a-menu" style="font-size:15px;width:124px;height:60px;" list="browsers" name="a-menu"  autofocus >	
                 <option value="1" selected disabled>Asset Num:</option>
                 {% for item in request.session.machine_temp %}
                 <option value={{item.0}}>{{item.0}}</option>
                 {% endfor %}
             </select>
         </div>
-        <div class="item6">
-            2.<select id="job-descr" style="font-size:15px;width:124px;height:60px;" list="browsers" name="job2" type="number">	
+        <div class="item2">
+            <select id="job-descr" style="font-size:15px;width:124px;height:60px;" list="browsers" name="job-descr" type="number">	
                 <option value="0" selected disabled>Job Description:</option>
-                <option value="1">Sintering</option>
-                <option value="2">Secondary</option>
-                <option value="3">Finishing</option>
-                <option value="4">Compacting</option>
+                <option value="Sintering">Sintering</option>
+                <option value="Secondary">Secondary</option>
+                <option value="Finishing">Finishing</option>
+                <option value="Compacting">Compacting</option>
             </select>
         </div>
-        <div class="item5">
-            3.<select id="scr-descr" style="font-size:15px;width:124px;height:60px;" list="browsers" name="job3" type="number">	
+        <div class="item3">
+            <select id="scr-descr" style="font-size:15px;width:124px;height:60px;" list="browsers" name="scr-descr" type="number">	
                 <option value="0" selected disabled>Scrap Description:</option>
-                <option value="1">Dropped</option>
-                <option value="2">Damaged</option>
-                <option value="3">Oversize</option>
-                <option value="4">Undersize</option>
+                <option value="Dropped">Dropped</option>
+                <option value="Damaged">Damaged</option>
+                <option value="Oversize">Oversize</option>
+                <option value="Undersize">Undersize</option>
             </select>
-        </div>
+				</div>
+				<div class="item4">
+					<font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity</font>
+			<br>
+					<input id = "amount" style="font-size:23px;width:190px;height:60px;" name="amount" type="number">
+			</div>
+
+			
+			<div class="item1">
+				<input style="background-color: #AAA00A;border-radius: 10px;width:140px;height:60px;font-weight: 700;font-size:23px;align=left;" type="submit" value="Enter">
+		</div>
+
+		<div class="item3">
+				<button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=right;" type="submit" name="kiosk_assign_button2" value="-2">Cancel</button>
+		</div>
+
 
   <!-- <div>
 	<form action="" method="post">{% csrf_token %}
