--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -17,9 +17,9 @@
       {% endblock %}
     </head>
     
-    <body style="background-color:rgb(0, 0, 0);"></body>
+    <body style="background-color:rgb(51, 51, 51);"></body>
     
-    <div class="navbar navbar-default navbar-fixed-top" style="background-color:rgb(234, 238, 200);border-color:rgb(170, 170, 163);border-width:1px" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top" style="background-color:rgb(0, 0, 0);border-color:rgb(255, 255, 255);border-width:1px" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -33,12 +33,12 @@
                 </a>
             </div>
             <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" >
 
                         <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
                         <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span> Apps<b class="caret"></b></a>
-                         <ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
+                        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Apps<b class="caret"></font></b></a>
+                         <ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
                             <li><a href="{{request.session.local_toggle}}/main">Supervisor</a></li>
                             <li><a href="{{request.session.local_toggle}}/maint_mgmt">Maintenance Manager</a></li>
 							<li><a href="{{request.session.local_toggle}}/mgmt">Production Manager</a></li>
@@ -58,8 +58,8 @@
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></b></a>
-							<ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
+				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
+							<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
 							   <li><a href="{{request.session.local_toggle}}/place_test">Clear All Session Variables</a></li>
 							   <li><a href="/switch_local">Switch to Local Deployment</a></li>
 							   <li><a href="{{request.session.local_toggle}}/switch_net">Switch to Server Deployment</a></li>
@@ -69,7 +69,7 @@
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-			    	    <li><a href="#"><span class="glyphicon glyphicon-folder-open"></span> Extras</a></li>
+			    	    <li><a href="#"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-folder-open"></span> Extras</a></font></li>
 			            </ul>	
 
             </div>
