Working on the excel dump sheet that creates a table and fills in entries based on an excel sheet

--- a/trakberry/templates/kiosk_scrap.html
+++ b/trakberry/templates/kiosk_scrap.html
@@ -46,6 +46,12 @@
 
 </style>
 
+<script>
+ function myFunction() {
+        document.querySelectorAll("input[type=submit]")[0].click();
+    }
+</script>
+
 </head>
 <body>
 
