--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -15,7 +15,7 @@
         
 
         <div class="item1">
-            <select id="a-menu" style="font-size:15px;width:124px;height:60px;" list="browsers" name="a-menu"  {{request.session.scrap1}}>	
+            <select id="a-menu" style="font-size:15px;width:124px;height:60px;" onchange="myFunction();" list="browsers" name="a-menu"  {{request.session.scrap1}}>	
                 <option value="1" selected disabled>{{request.session.asset}}</option>
                 {% for item in request.session.machine_temp %}
                 <option value={{item.0}}>{{item.0}}</option>
@@ -23,8 +23,8 @@
             </select>
         </div>
         <div class="item2">
-            <select id="job-descr" style="font-size:15px;width:124px;height:60px;" list="browsers" name="job-descr" type="number" {{request.session.scrap2}}>	
-                <option value="0" selected disabled>Job Description:</option>
+            <select id="job-descr" style="font-size:15px;width:124px;height:60px;" onchange="myFunction();" list="browsers" name="job-descr" type="number" {{request.session.scrap2}}>	
+                <option value="0" selected disabled>{{request.session.job}}</option>
                 <option value="Sintering">Sintering</option>
                 <option value="Secondary">Secondary</option>
                 <option value="Finishing">Finishing</option>
@@ -32,8 +32,8 @@
             </select>
         </div>
         <div class="item3">
-            <select id="scr-descr" style="font-size:15px;width:124px;height:60px;" list="browsers" name="scr-descr" type="number">	
-                <option value="0" selected disabled>Scrap Description:</option>
+            <select id="scr-descr" style="font-size:15px;width:124px;height:60px;" onchange="myFunction();"  list="browsers" name="scr-descr" type="number" {{request.session.scrap3}}>	
+                <option value="0" selected disabled>{{request.session.scrap}}</option>
                 <option value="Dropped">Dropped</option>
                 <option value="Damaged">Damaged</option>
                 <option value="Oversize">Oversize</option>
@@ -43,7 +43,7 @@
 				<div class="item4">
 					<font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity</font>
 			<br>
-					<input id = "amount" style="font-size:23px;width:190px;height:60px;" name="amount" type="number">
+					<input id = "amount" style="font-size:23px;width:190px;height:60px;" name="amount" type="number" {{request.session.scrap4}}>
 			</div>
 
 			
