--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -17,7 +17,7 @@
       {% endblock %}
     </head>
     
-    <body style="background-color:rgb(51, 51, 51);"></body>
+    <body style="background-color:rgb(51,51,51);">
     
     <div class="navbar navbar-default navbar-fixed-top" style="background-color:rgb(0, 0, 0);border-color:rgb(255, 255, 255);border-width:1px" role="navigation">
         <div class="container">
@@ -77,6 +77,6 @@
         </div>
     </div>
     <br><br><br><br><br>
-
-
+	{% block content %}
+	{% endblock %}
 </body></html>
