--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -14,7 +14,55 @@
 			<link rel="stylesheet" href="/static/style_1/maint_mgmt.css?{{request.session.TCUR}}">  <!-- include the proper styling -->
 
       {% block grid %}
-      {% endblock %}
+	  {% endblock %}
+	  
+<style>
+.dropdown-submenu {
+    position: relative;
+}
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+.dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+.dropdown-submenu:hover>a:after {
+    border-left-color: #ff;
+}
+.dropdown-submenu.pull-left {
+    float: none;
+}
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}	
+.headcol {
+  position: absolute;
+}
+}
+</style>
     </head>
     
     <body style="background-color:rgb(51,51,51);">
@@ -61,11 +109,25 @@
 				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
 							<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
 							   <li><a href="{{request.session.local_toggle}}/place_test">Clear All Session Variables</a></li>
-							   <li><a href="{{request.session.local_toggle}}/excel_dump">Excel Dump</a></li>
+
+							   <li class="dropdown-submenu">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Excel Dump</a>
+										<ul class="dropdown-menu"  style="background-color:rgb(202, 230, 127);">
+											<li class="dropdown-submenu">
+												<!-- <li><a href="#">Rotation</a></li>   -->
+												<li><a href="{{request.session.local_toggle}}/excel_dump">Dump Excel Default Sheet</a></li> 
+											</li>
+											<li class="dropdown-submenu"  style="background-color:rgb(202, 230, 127);"> 
+												<!-- <li><a href="#">Generate Schedule</a></li>  -->
+									   			<li><a href="{{request.session.local_toggle}}/excel_scrap_dump">Dump Excel Scrap Sheets</a></li> 
+											</li>
+										</ul>
+								</li>  
 							   <li><a href="/switch_local">Switch to Local Deployment</a></li>
 							   <li><a href="{{request.session.local_toggle}}/switch_net">Switch to Server Deployment</a></li>
  
 						   </ul>  
+						</li>
 			    	    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
