--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -45,7 +45,7 @@
 				<div class="item4">
 					<font color="#000000" size ="6" style="font-weight: 700;font-size:29px;">Scrap Quantity</font>
 			<br>
-					<input id = "amount" style="font-size:23px;width:190px;height:60px;" name="amount" type="number" {{request.session.scrap4}}>
+					<input id = "scrap_amount" style="font-size:23px;width:190px;height:60px;" name="scrap_amount" type="number" {{request.session.scrap4}}>
 			</div>
 
 			
