reset and cancel

--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -51,7 +51,11 @@
 			
 			<div class="item1">
 				<input style="background-color: #AAA00A;border-radius: 10px;width:140px;height:60px;font-weight: 700;font-size:23px;align=left;" type="submit" value="Enter">
-		</div>
+        </div>
+        
+        <div class="item2">
+            <input style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=left;" type="reset" value="Reset">
+        </div>
 
 		<div class="item3">
 				<button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=right;" type="submit" name="kiosk_assign_button2" value="-2">Cancel</button>
