fixed reset and cancel button

--- a/trakberry/templates/kiosk_scrap_entry.html
+++ b/trakberry/templates/kiosk_scrap_entry.html
@@ -54,11 +54,12 @@
         </div>
         
         <div class="item2">
-            <input style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=left;" type="reset" value="Reset">
+					<button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=right;" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_scrap_reset';">Reset</button>
         </div>
 
 		<div class="item3">
-				<button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=right;" type="submit" name="kiosk_assign_button2" value="-2">Cancel</button>
+
+				<button style="background-color: #AAAAAA;border-radius: 10px;width:120px;height:60px;font-weight: 700;font-size:23px;align=right;" type="button" onclick="window.location.href = '{{request.session.local_toggle}}/kiosk_scrap';">Cancel</button>
 		</div>
 
 
