--- a/trakberry/templates/kiosk/kiosk_menu.html
+++ b/trakberry/templates/kiosk/kiosk_menu.html
@@ -20,7 +20,45 @@
 #full-screen-background-image {z-index: -999;min-height: 110%; min-width: 100%;width: 100%;height: 110%;position: fixed;top: 0;  left: 0;}
 	.banner2_bg{position:absolute;background-color: #000000;opacity: 0.8;filter:alpha(opacity=80);width:auto; height:auto;z-index:-440;	border-radius: 25px;;}
 
+	.button {
+  width: 50%;
+  height: 210px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #000000;
+  background-color: #D1CDC2;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 15px #999;
+}
 
+.button:hover {background-color: #BEB2A7}
+
+.button:active {
+  background-color: #BEB2A7;
+  box-shadow: 0 8px #666;
+  transform: translateY(8px);
+}
+
+.button2 {
+	width: 50%;
+	height: 210px;
+	text-align: center;
+	cursor: pointer;
+	outline: none;
+	color: #000000;
+	background-color: rgb(231, 212, 161);
+	border: none;
+	border-radius: 15px;
+	box-shadow: 0 15px #999;
+  }
+  .button2:hover {background-color: rgb(211, 193, 144)}
+  .button2:active {
+	background-color: rgb(211, 193, 144);
+	box-shadow: 0 8px #666;
+	transform: translateY(8px);
+  }
 </style>
 </head>
 
