--- a/trakberry/templates/kiosk/kiosk_menu.html
+++ b/trakberry/templates/kiosk/kiosk_menu.html
@@ -1,80 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<!-- ********************************* BootStrap Local*******************************-->
-	<script src="/static/bootstrap/js/1.11.3/jquery.min.js"></script>
-	<script src="/static/bootstrap/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
-	<!-- ***********************************************************************************-->
-{% block grid %}
-	<!-- Include Styling for Buttons and Frames -->
-	<link rel="stylesheet" href="/static/style_1/grid_kiosk_main2.css?{{request.session.TCUR}}">
-	<!-- <link rel="stylesheet" href="/static/style_1/kiosk_main.css?{{request.session.TCUR}}"> -->
-{% endblock %}
-<style>
+{% extends "kiosk/kiosk_style.html" %}
+{% block main %}
 
-.frame1 {color:black;text-align:center;float:left;width:40%}
-.frame3 {color:black;text-align:center;float:left;width:33%}
-.frame2 {color:black;text-align:center;float:left;width:100%}
 
-#full-screen-background-image {z-index: -999;min-height: 110%; min-width: 100%;width: 100%;height: 110%;position: fixed;top: 0;  left: 0;}
-	.banner2_bg{position:absolute;background-color: #000000;opacity: 0.8;filter:alpha(opacity=80);width:auto; height:auto;z-index:-440;	border-radius: 25px;;}
-
-	.button {
-  width: 50%;
-  height: 210px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: #000000;
-  background-color: #D1CDC2;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 15px #999;
-}
-
-.button:hover {background-color: #BEB2A7}
-
-.button:active {
-  background-color: #BEB2A7;
-  box-shadow: 0 8px #666;
-  transform: translateY(8px);
-}
-
-.button2 {
-	width: 50%;
-	height: 210px;
-	text-align: center;
-	cursor: pointer;
-	outline: none;
-	color: #000000;
-	background-color: rgb(231, 212, 161);
-	border: none;
-	border-radius: 15px;
-	box-shadow: 0 15px #999;
-  }
-  .button2:hover {background-color: rgb(211, 193, 144)}
-  .button2:active {
-	background-color: rgb(211, 193, 144);
-	box-shadow: 0 8px #666;
-	transform: translateY(8px);
-  }
-</style>
-</head>
-
-<body>
 <meta name="apple-mobile-web-app-capable" content="yes" />
-
 <img alt="full screen background image" src="/static/media/kiosk.jpeg?{{request.session.TCUR}}" id="full-screen-background-image"/>
-
 <br><br><br>
-
 {% block content%}  <!-- Main Block -->
 <form action="" method="post">{% csrf_token %}
 <br><br><br><br>
-
 <center>
-
 	<div class="frame1">
 		<button class="button" type="submit" name="kiosk_button1" value="-1"><font size="6"><b>White Board<br>(Hourly Counts)</b></font></button>
 	</div>
@@ -92,18 +26,9 @@
 		</button>
 		<br><br><br><br>	
 	</div>
-
 </center>
-
-
-
-
 </form>
+{% endblock %}  <!-- End content Block -->
 
 
-
-{% endblock %}  <!-- End Main Block -->
-
-</body>
-</html>
-  
+{% endblock %}
