--- a/trakberry/templates/production/mgmt_users_logins_add.html
+++ b/trakberry/templates/production/mgmt_users_logins_add.html
@@ -65,6 +65,7 @@
 	<option value="Production">Production</option>
 	<option value="Production Manager">Production Manager</option>
 	<option value="Forklift">Forklift</option>
+	<option value="Quality Manager">Quality Manager</option>
 
 </select>
 
