--- a/trakberry/templates/scrap_mgmt_login_form.html
+++ b/trakberry/templates/scrap_mgmt_login_form.html
@@ -15,7 +15,8 @@
 		<tr><td>&nbsp;&nbsp;&nbsp;</td></tr>
 		<tr><td><b><u>Login Name</b></u>&nbsp;&nbsp;&nbsp;</td><td>
 	<select style="font-size:14px;width:320px;height:30px;" name="login_name" >
-{% for i in request.session.scrap_mgmt_manpower %}
+<!-- {% for i in request.session.scrap_mgmt_manpower %} -->
+{% for i in SList %}
 <option value="{{ i.1 }}">{{ i.1 }}</option>
 {% endfor %}
 </select>
