--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -2,6 +2,23 @@
 {% block main %}
     <body style="background-color:{{request.session.main_screen_color}};"></body>
     
+    <table>
+        <tr>
+            <th>Part Number</th>
+            <th>Scrap Amount</th>
+            <th>Scrap Cost</th>
+        </tr>
+        <tr>
+            <td>35-0150</td>
+            <td>23</td>
+            <td>9.45</td>
+        </tr>
+        <tr>
+            <td>35-0133</td>
+            <td>12</td>
+            <td>4.93</td>
+        </tr>
+    </table>
     <div class="navbar navbar-default navbar-fixed-top" style="background-color:{{request.session.main_menu_color}};border-color: rgb(26, 24, 11);border-width:1px" role="navigation">
         <div class="container">
             <div class="navbar-header">
