--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -1,24 +1,8 @@
 {% extends "scrap_mgmt_style.html" %}
 {% block main %}
-    <body style="background-color:{{request.session.main_screen_color}};"></body>
+    <body style="background-color:{{request.session.main_screen_color}};">
     
-    <table>
-        <tr>
-            <th>Part Number</th>
-            <th>Scrap Amount</th>
-            <th>Scrap Cost</th>
-        </tr>
-        <tr>
-            <td>35-0150</td>
-            <td>23</td>
-            <td>9.45</td>
-        </tr>
-        <tr>
-            <td>35-0133</td>
-            <td>12</td>
-            <td>4.93</td>
-        </tr>
-    </table>
+    
     <div class="navbar navbar-default navbar-fixed-top" style="background-color:{{request.session.main_menu_color}};border-color: rgb(26, 24, 11);border-width:1px" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -45,7 +29,7 @@
                         <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
                         <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span> Reports<b class="caret"></b></a>
                          <ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
-                            <li><a href="{{request.session.local_toggle}}/scrap_mgmt">Last 24hrs</a></li>
+                            <li><a href="{{request.session.local_toggle}}/scrap_display">Last 24hrs</a></li>
                             <li><a href="#">By Line</a></li>
                             <li><a href="#">Details</a></li>                  
                         </ul>        
@@ -75,6 +59,10 @@
 <meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/scrap_mgmt_login_form" />
 
 {% endif %}
+
+
+
+
 
 {% endblock %}
 
