--- a/trakberry/templates/scrap_mgmt_style.html
+++ b/trakberry/templates/scrap_mgmt_style.html
@@ -7,6 +7,13 @@
 	<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
 	<!-- ***********************************************************************************-->
 <style>
+	*{margin: 0; padding: 0; outline: 0;}
+	table{position: absolute; z-index: 2; left: 50%; top: 0%; transform: translate(-50%,50%); width: 60%; border-collapse: collapse;
+	border-spacing: 0; box-shadow: 0 2px 15px rgba( 64,64,64,.7); border-radius: 12px 12px 0 0; overflow: hidden;}
+	td , th {padding: 15px 20px;}
+	th{background-color: #607b91; color: #fafafa; font-weight: 200; text-transform: uppercase;}
+	tr{width: 100%; background-color: #fafafa;}
+	tr:nth-child(even){background-color: #eeeeee;}
 	.frame1 {color:black;text-align:center;background:rgb(214, 214, 214);float:left;width:40%}
 	.frame2{color:black;text-align:center;background:rgb(253, 186, 186);float:left;width:30%;position:relative;left:5px;}
 	.frame3{color:black;text-align:center;background:rgb(42, 165, 83);float:left;width:25%;position:relative;left:10px;}
