--- a/trakberry/templates/scrap_mgmt_login_form.html
+++ b/trakberry/templates/scrap_mgmt_login_form.html
@@ -11,9 +11,9 @@
 		<div class="col-sm-6">
 <form action="" method="post">{% csrf_token %}
 <table>
-	<tr><td colspan="2" style="font-size:25px;"><b><u><center>LOG IN</center></b></u></td><tr>
-		<tr><td>&nbsp;&nbsp;&nbsp;</td></tr>
-		<tr><td><b><u>Login Name</b></u>&nbsp;&nbsp;&nbsp;</td><td>
+	<tr><td colspan="2" style="font-size:25px; background-color: #607b91;"><b><u><center>LOG IN</center></b></u></td><tr>
+		<tr</tr>
+		<tr><td><b><u>Login Name</b></u></td><td>
 	<select style="font-size:14px;width:320px;height:30px;" name="login_name" >
 {% for i in request.session.scrap_mgmt_manpower %}
 <option value="{{ i.1 }}">{{ i.1 }}</option>
@@ -21,7 +21,7 @@
 </select>
 </td></tr>
 <tr><td><b><u>Password</b></u>&nbsp;&nbsp;&nbsp;</td><td><input style="font-size:14px;width:320px;height:30px;" type="password" name="login_password"></td></tr>
-<tr><td>&nbsp;&nbsp;&nbsp;</td></tr>
+<tr></tr>
 <tr><td colspan="2" ><center>
 	<input style="background-color: #999999;border-radius: 10px;height:30px;" type="submit" name="button1" value="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Enter&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;">
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
