--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -41,7 +41,7 @@
 			            </ul>	
 			            <ul class="nav navbar-nav navbar-right">	
 			                <li><font size ="2" style="color:rgb(100, 100, 100)">Welcome: <b>{{request.session.scrap_mgmt_login_name}}</b></li>
-                            <li><a href="{{request.session.local_toggle}}/maint_mgmt_login_form" style="color:rgb(100, 100, 100)"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+                            <li><a href="{{request.session.local_toggle}}/scrap_mgmt_login_form" style="color:rgb(100, 100, 100)"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
                     
                     {% endif %}
 
