tables can be edited

--- a/trakberry/templates/scrap_mgmt24.html
+++ b/trakberry/templates/scrap_mgmt24.html
@@ -14,13 +14,13 @@
 	<tr>
 		
 		<td>
-			{{i.1}}
+			<div contenteditable="true">{{i.1}}</div>
 		</td>
 		<td>
-			{{i.4}}
+			<div contenteditable="true">{{i.4}}</div>
 		</td>
 		<td>
-			{{i.6}}
+			<div contenteditable="true">{{i.6}}</div>
 		</td>
 	</tr>
 {% endfor %}
