--- a/trakberry/templates/scrap_mgmt_style.html
+++ b/trakberry/templates/scrap_mgmt_style.html
@@ -8,7 +8,7 @@
 	<!-- ***********************************************************************************-->
 <style>
 	*{margin: 0; padding: 0; outline: 0;}
-	table{position: absolute; z-index: 2; left: 50%; top: 0%; transform: translate(-50%,50%); width: 60%; border-collapse: collapse;
+	table{position: absolute; z-index: 2; left: 50%; right: 50%; top: 20%; transform: translate(-50%,50%); width: 60%; border-collapse: collapse;
 	border-spacing: 0; box-shadow: 0 2px 15px rgba( 64,64,64,.7); border-radius: 12px 12px 0 0; overflow: hidden;}
 	td , th {padding: 15px 20px;}
 	th{background-color: #607b91; color: #fafafa; font-weight: 200; text-transform: uppercase;}
