--- a/trakberry/templates/scrap_mgmt24.html
+++ b/trakberry/templates/scrap_mgmt24.html
@@ -2,26 +2,26 @@
 
 
 {% block content %}
-
+<!-- <a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.0 }}" class="blue"></a> -->
 
 <table>
 	<tr>
 		<th>Part Number</th>
 		<th>Scrap Amount</th>
-		<th>Scrap Cost</th>
+		<!-- <th>Scrap Cost</th> -->
 	</tr>
 	{% for i in request.session.tmp_scrap %}
 	<tr>
 		
 		<td>
-			<div contenteditable="true">{{i.1}}</div>
+			<a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.1 }}">{{i.1}}</a>
 		</td>
 		<td>
-			<div contenteditable="true">{{i.4}}</div>
+			<a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.1 }}">{{i.0}}</a>
 		</td>
-		<td>
+		<!-- <td>
 			<div contenteditable="true">{{i.6}}</div>
-		</td>
+		</td> -->
 	</tr>
 {% endfor %}
 
