--- a/trakberry/templates/scrap_mgmt24.html
+++ b/trakberry/templates/scrap_mgmt24.html
@@ -14,10 +14,10 @@
 	<tr>
 		
 		<td>
-			<a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.1 }}">{{i.1}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.1}}</a>
 		</td>
 		<td>
-			<a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.1 }}">{{i.0}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.0}}</a>
 		</td>
 		<!-- <td>
 			<div contenteditable="true">{{i.6}}</div>
