--- a/trakberry/templates/scrap_mgmt_category.html
+++ b/trakberry/templates/scrap_mgmt_category.html
@@ -6,20 +6,20 @@
 
 <table class="center">
 	<tr>
-		<th>Part Number</th>
-		<th>Scrap Amount</th>
+		<th>Category</th>
+		<th>Category Amount</th>
 		<!-- <th>Scrap Cost</th> -->
 	</tr>
-	{% for i in request.session.tmp_scrap %}
+	{% for i in request.session.tmp_scrap2 %}
 	<tr>
 		
 		<td>
 			<!-- <a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.1}}</a> -->
-			<a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{i.1}}">{{i.1}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_display_category/get/{{i.1}}">{{i.1}}</a>
 
 		</td>
 		<td>
-			<a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.0}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_display_category/get/{{ i.1 }}">{{i.0}}</a>
 		</td>
 		<!-- <td>
 			<div contenteditable="true">{{i.6}}</div>
