--- a/trakberry/templates/scrap_mgmt_operation.html
+++ b/trakberry/templates/scrap_mgmt_operation.html
@@ -6,8 +6,8 @@
 
 <table class="center">
 	<tr>
-		<th>Part Number</th>
-		<th>Scrap Amount</th>
+		<th>Operation</th>
+		<th>Operation Amount</th>
 		<!-- <th>Scrap Cost</th> -->
 	</tr>
 	{% for i in request.session.tmp_scrap %}
@@ -15,11 +15,11 @@
 		
 		<td>
 			<!-- <a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.1}}</a> -->
-			<a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{i.1}}">{{i.1}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_display_category/get/{{i.1}}">{{i.1}}</a>
 
 		</td>
 		<td>
-			<a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.0}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_display_category/get/{{ i.1 }}">{{i.0}}</a>
 		</td>
 		<!-- <td>
 			<div contenteditable="true">{{i.6}}</div>
