--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -35,7 +35,11 @@
                         </ul>        
                         </li>
 			    	    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-				        <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Assets</a></li>
+				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span>Edits<b class="caret"></b></a>
+                            <ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
+                               <li><a href="{{request.session.local_toggle}}/scrap_entries">Entries</a></li>
+                               <li><a href="#">Template</a></li>               
+                           </ul>
 			    	    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 			    	    <li><a href="#"><span class="glyphicon glyphicon-folder-open"></span> Manpower</a></li>
 			            </ul>	
