--- a/trakberry/templates/scrap_mgmt_style.html
+++ b/trakberry/templates/scrap_mgmt_style.html
@@ -12,7 +12,7 @@
 	border-spacing: 0; box-shadow: 0 2px 15px rgba( 64,64,64,.7); border-radius: 12px 12px 0 0; overflow: hidden;}
 	table.center{margin-left: 15%; margin-right: 15%; width: 70%;}
 	td , th {padding: 15px 20px;}
-	th{background-color: #607b91; color: #fafafa; font-weight: 200; text-transform: uppercase; text-align: center;}
+	th{background-color: #a8b4a9; color: #fafafa; font-weight: 200; text-transform: uppercase; text-align: center;}
 	tr{width: 100%; background-color: #fafafa;}
 	tr:nth-child(even){background-color: #eeeeee;}
 	.frame1 {color:black;text-align:center;background:rgb(214, 214, 214);float:left;width:40%}
