--- a/trakberry/templates/scrap_mgmt_category.html
+++ b/trakberry/templates/scrap_mgmt_category.html
@@ -5,6 +5,9 @@
 <!-- <a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.0 }}" class="blue"></a> -->
 
 <table class="center">
+	<tr><th colspan="2"><b>Part: {{request.session.scrap_24hrs_part}}
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		Operation: {{request.session.scrap_24hrs_operation}}</b></th></tr>
 	<tr>
 		<th>Category</th>
 		<th>Category Amount</th>
