--- a/trakberry/templates/scrap_mgmt_operation.html
+++ b/trakberry/templates/scrap_mgmt_operation.html
@@ -5,6 +5,7 @@
 <!-- <a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.0 }}" class="blue"></a> -->
 
 <table class="center">
+	<tr><th colspan="2"><b>Part: {{request.session.scrap_24hrs_part}}</b></th></tr>
 	<tr>
 		<th>Operation</th>
 		<th>Operation Amount</th>
