--- a/trakberry/templates/scrap_mgmt24.html
+++ b/trakberry/templates/scrap_mgmt24.html
@@ -5,9 +5,15 @@
 <!-- <a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.0 }}" class="blue"></a> -->
 
 <table class="center">
+	<tr><th colspan="3"><font size="4" style="color:rgb(255, 255, 255)"><b><u>Last 24hrs Scrap Summary</b></u></font></th></tr>
+
+	<font size ="2" style="color:rgb(100, 100, 100)">
+	
+	</font>
 	<tr>
 		<th>Part Number</th>
 		<th>Scrap Amount</th>
+		<th>Cost</th>
 		<!-- <th>Scrap Cost</th> -->
 	</tr>
 	{% for i in request.session.tmp_scrap %}
@@ -20,6 +26,9 @@
 		</td>
 		<td>
 			<a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.0}}</a>
+		</td>
+		<td>
+			<a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">$ {{i.2}}</a>
 		</td>
 		<!-- <td>
 			<div contenteditable="true">{{i.6}}</div>
