--- a/trakberry/templates/scrap_mgmt_category_shift.html
+++ b/trakberry/templates/scrap_mgmt_category_shift.html
@@ -5,12 +5,15 @@
 <!-- <a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.0 }}" class="blue"></a> -->
 
 <table class="center">
-	<tr><th colspan="3"><font size="4" style="color:rgb(255, 255, 255)"><b><u>Part: {{request.session.scrap_24hrs_part}}
+	<tr><th colspan="3"><font size="4" style="color:rgb(255, 255, 255)"><b><u>Part: {{request.session.scrap_24hrs_part}}</u>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		Operation: {{request.session.scrap_24hrs_operation}}</u></font></b></th></tr>
+		Operation: {{request.session.scrap_24hrs_operation}}
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		Category: {{request.session.scrap_24hrs_category}}
+	</font></b></th></tr>
 	<tr>
-		<th>Category</th>
-		<th>Category Amount</th>
+		<th>Date</th>
+		<th>Amount Scrap</th>
 		<th>Cost</th>
 		<!-- <th>Scrap Cost</th> -->
 	</tr>
@@ -19,14 +22,14 @@
 		
 		<td>
 			<!-- <a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.1}}</a> -->
-			<a href="{{request.session.local_toggle}}/scrap_display_category_shift/get/{{i.1}}">{{i.1}}</a>
+			{{i.4}}
 
 		</td>
 		<td>
-			<a href="{{request.session.local_toggle}}/scrap_display_category_shift/get/{{ i.1 }}">{{i.0}}</a>
+			{{i.0}}
 		</td>
 		<td>
-			<a href="{{request.session.local_toggle}}/scrap_display_category_shift/get/{{ i.1 }}">$ {{i.3}}</a>
+		 $ {{i.3}}</a>
 		</td>
 		<!-- <td>
 			<div contenteditable="true">{{i.6}}</div>
