Added a table create section

--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -101,7 +101,7 @@
 							<li><a href="{{request.session.local_toggle}}/kiosk_menu">Production Kiosk</a></li>  
 							<li><a href="{{request.session.local_toggle}}/kiosk_scrap">Scrap Kiosk</a></li> 
 							<li><a href="{{request.session.local_toggle}}/hrly_display">Supervisor TV Hourly Display</a></li>  
-                        </ul>        
+                        </ul>
                         </li>
 			    	    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
@@ -122,10 +122,13 @@
 												<!-- <li><a href="#">Generate Schedule</a></li>  -->
 									   			<li><a href="{{request.session.local_toggle}}/excel_scrap_dump">Dump Excel Scrap Sheets</a></li> 
 											</li>
+											
 										</ul>
 								</li>  
 							   <li><a href="/switch_local">Switch to Local Deployment</a></li>
 							   <li><a href="{{request.session.local_toggle}}/switch_net">Switch to Server Deployment</a></li>
+							   <li><a href="{{request.session.local_toggle}}/create_table_1">Create DB</a></li> 
+
  
 						   </ul>  
 						</li>
