prev value changes but doesn't go back to the last page

--- a/trakberry/templates/scrap_entries.html
+++ b/trakberry/templates/scrap_entries.html
@@ -7,7 +7,7 @@
 <table class="center">
 	<tr>
 		<!-- <th></th> -->
-		<th><form><a href="{{request.session.local_toggle}}/scrap_entries" class="previous round">&laquo; Not Previous</a></font>
+		<th><form><a href="{{request.session.local_toggle}}/scrap_entries_prev" class="previous round">&laquo; </a></font>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Part Number</th>
         <th>Operation</th>
