designed and worked on scrap_display_edit_entries

--- a/trakberry/templates/scrap_mgmt_category_shift.html
+++ b/trakberry/templates/scrap_mgmt_category_shift.html
@@ -10,7 +10,7 @@
 		Operation: {{request.session.scrap_24hrs_operation}}
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		Category: {{request.session.scrap_24hrs_category}}
-	</font></b></th></tr>
+	</font></u></b></th></tr>
 	<tr>
 		<th>Date</th>
 		<th>Amount Scrap</th>
