--- a/trakberry/templates/scrap_display_edit_entries.html
+++ b/trakberry/templates/scrap_display_edit_entries.html
@@ -12,12 +12,12 @@
           text-align: left;
           padding: 7px;
         }
-        tr:nth-child(odd){background-color: #c7c9ad}
-        tr:nth-child(even){background-color: #ebeace}
+        tr:nth-child(odd){background-color: #a8b4a9}
+        tr:nth-child(even){background-color: #a8b4a9}
         a.blue:link {color: black;}
         a.blue:active {color: black;}
         a.blue:visited {color: black;}
-        a.blue:hover {color: black;background-color: rgb(255, 223, 78);border-radius: 10px;}
+        a.blue:hover {color: black;background-color: rgb(10, 46, 29);border-radius: 10px;}
 </style>
 <center>
 
@@ -33,7 +33,7 @@
 <tr>
     {% for x in request.session.table_headers %}
         <td nowrap>
-            <font size ="2" style="color:rgb(180, 40, 40)">
+            <font size ="2" style="color:rgb(40, 117, 180)">
                 <b>{{x}}</b> 
             </font>
         </td>
