--- a/trakberry/templates/scrap_entries.html
+++ b/trakberry/templates/scrap_entries.html
@@ -16,10 +16,10 @@
         <th>Line</th>
         <th>Cost</th>
 		<th>Date</th> 
-		<th><a href="{{request.session.local_toggle}}/scrap_entries_next">  &nbsp;&nbsp;&nbsp;&nbsp;Next </a></th>
+		<th><a href="{{request.session.local_toggle}}/scrap_entries_next">Next</a></th>
 		<!-- <th>Scrap Cost</th> -->
 	</tr>
-	{% for i in request.session.tmp_scrap_entries %}['']
+	{% for i in request.session.tmp_scrap_entries %}
 	<tr>
 		<td></td>
 		<td>
